bk_ida/bzip2ida/c1/BZ2_hbCreateDecodeTables
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:716:12: error: expected expression
*( _OWORD *)( base + 19) = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:716:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( base + 19) = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:717:14: error: expected expression
*( ( _OWORD *)base + 4) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:717:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 4) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:718:14: error: expected expression
*( ( _OWORD *)base + 3) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:718:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 3) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:719:14: error: expected expression
*( ( _OWORD *)base + 2) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:719:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 2) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:720:14: error: expected expression
*( ( _OWORD *)base + 1) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:720:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 1) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:721:12: error: expected expression
*( _OWORD *)base = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:721:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)base = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:733:12: error: expected expression
*( _OWORD *)( limit + 19) = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:733:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( limit + 19) = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:734:14: error: expected expression
*( ( _OWORD *)limit + 4) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:734:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 4) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:735:14: error: expected expression
*( ( _OWORD *)limit + 3) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:735:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 3) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:736:14: error: expected expression
*( ( _OWORD *)limit + 2) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:736:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 2) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:737:14: error: expected expression
*( ( _OWORD *)limit + 1) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:737:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 1) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:738:12: error: expected expression
*( _OWORD *)limit = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/huffman.c:738:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)limit = 0LL; 
   ^
24 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_hbCreateDecodeTables/src/obj/huffman.o] Error 1
